--- a/Week2/Tugas/1214049/index.html
+++ b/Week2/Tugas/1214049/index.html
@@ -29,7 +29,7 @@
     <meta name="twitter:description" content="Multi-line Table design made using Tailwind CSS" />
     <meta name="twitter:image" content="http://tailwindcomponents.com/storage/8416/conversions/temp41738-ogimage.jpg?v=2023-02-13 07:30:00" />
 
-    <title>Multi-line Table by lvwzhen. </title>
+    <title>Punya Aufea </title>
 
             <script src="https://cdn.tailwindcss.com"></script>
     </head>
